# JobTrackr

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  dump.sh  git-conventional-commits.yaml  pyproject.toml
.github/workflows/: pr-checks.yaml  release.yaml
alembic/: env.py
alembic/versions/: 0d60e646518c_.py  5391b8a670c1_add_link_to_applications.py  7cb7e29ef42a_.py  88926e4364a0_.py  abe249e110f8_init.py  b610c5984d3c_add_subject_to_interactions.py
scripts/: migration_manager.py
src/: main.py
src/api/: app.py  config.py
src/api/db/: client.py  schema.py
src/api/schema/: inputs.py  mutations.py  queries.py  types.py
src/api/services/: application_service.py  company_service.py
src/config/: __init__.py
src/db/: database.py  manager.py  models.py  settings.py
src/dgraph/: init_schema.py
src/gui/: main_window.py  search.py
src/gui/components/: data_table.py  dialog_header.py  status_badge.py  styled_button.py
src/gui/dialogs/: application_detail.py  application_form.py  application_selector.py  base_form.py  company_detail.py  company_form.py  company_relationship_form.py  contact_detail.py  contact_form.py  contact_selector.py  interaction_form.py  settings.py  status_transition.py
src/gui/tabs/: applications.py  companies.py  contacts.py  dashboard.py
src/services/: analytics_service.py  application_service.py  base_service.py  change_record_service.py  company_service.py  contact_service.py  interaction_service.py  reminder_service.py
src/tui/: analytics.py  api_client.py  app.css  app.py  app.tcss  application_detail.py  application_form.py  applications.py  company_form.py  context_menu.py  dashboard.py  export.py  first_run.py  interaction_form.py  quick_add.py  reminder_form.py  search.py  settings_screen.py  status_transition.py  today.py
src/tui/tabs/applications/: application_detail.py  application_form.py  applications.py  interaction_form.py  status_transition.py
src/tui/tabs/companies/: companies.py  company_detail.py  company_form.py  relationship_form.py
src/tui/tabs/contacts/: contact_detail.py  contact_form.py  contacts.py
src/tui/tabs/dashboard/: dashboard.py
src/tui/tabs/settings/: export.py  first_run.py  settings.py
src/tui/widgets/: application_list.py  confirmation_modal.py  file_dialog.py  list_view.py  plot_chart.py  progress_bar.py  reminder_list.py  stats_card.py  time_series_chart.py
src/utils/: decorators.py  enums.py  logging.py
test/e2e/: conftest.py  service_logic_test.py
test/e2e/dialogs/: test_search_dialog.py  test_settings_dialog.py
test/e2e/tabs/: test_applications_tab.py  test_companies_tab.py  test_contacts_tab.py  test_dashboard_tab.py
test/e2e/windows/: test_main_window.py
