[project]
name = "job-tracker"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "plotext>=5.3.2",
    "sqlalchemy>=2.0.40",
    "textual>=3.1.1",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.7",
    "textual-dev>=1.7.0",
]
